--- a/src/02-timer.html
+++ b/src/02-timer.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Countdown timer</title>
+    <link rel="stylesheet" href="css/timer.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
     <link rel="stylesheet" href="css/common.css" />
   </head>
   <body>
     <p><a href="index.html">Go back</a></p>
 
     <input type="text" id="datetime-picker" />
-    <button type="button" data-start>Start</button>
+    <button type="button"  data-start>Start</button>
+
 
     <div class="timer">
       <div class="field">
@@ -31,6 +34,6 @@
       </div>
     </div>
 
-    <script src="js/02-timer.js"></script>
+    <script src="js/02-timer.js" type ="module"></script>
   </body>
 </html>
